--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,8 @@
 # Changing ctrl b to ctrl a as the command button
 unbind C-b
 set -g prefix C-a
+
+bind-key | split-window -h
+bind-key _ split-window -v
+
+set-option -g mouse on
